--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "libs/implot"]
 	path = libs/implot
 	url = https://github.com/epezent/implot
+[submodule "libs/kissfft"]
+	path = libs/kissfft
+	url = https://github.com/mborgerding/kissfft.git
